# rustic-backend

./: Cargo.toml  README.md
src/: cors_hack.rs  main.rs  s3_interface.rs  utils.rs
