[package]
name = "rustic"
version = "0.1.0"
authors = ["Sid Shankar <sid.shankar@prodigygame.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
multipart = "0.16.1"
rocket = "0.4.2"
rusoto_core = "0.42.0"
rusoto_s3 = "0.42.0"
serde = {version="1.0.104", features=["derive"]}

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
